#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(testcompile ,0.1, [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([a.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AM_INIT_AUTOMAKE

AC_CONFIG_FILES([makefile
                 test/makefile])
AC_OUTPUT
